kubernetes/tools/home-assistant-forward/base/httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-forward
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-forward
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - port: 8123
        protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-forward
spec:
  hostnames:
    - ha.wagner.gg
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant-forward
          port: 8123
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
