kubernetes/tools/home-assistant-forward/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-forward
  annotations:
    external-dns.alpha.kubernetes.io/target: vps.wagner.gg
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-public
  rules:
    - host: ha.wagner.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-forward
                port:
                  number: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-forward
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.0.3
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
